add link to form

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <body>
     <h1>ARTS DATATHON - Crafting Track</h1>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfQDNdZLUO_kQ1dYrGSzyPvEWooAbUD9vJzJelTL5RjRtm05Q/viewform" target="_blank">Entry form</a><br><br>
+    
     <div id="map-display"></div>
     
     <div id="main"></div>
