clicking markers updates content instead of opening popups. handles anonymous names

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <h2>Visualizing Data Through Craft</h2>
                 <hr>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfQDNdZLUO_kQ1dYrGSzyPvEWooAbUD9vJzJelTL5RjRtm05Q/viewform" target="_blank">Entry form</a><br><br>
+                <div id="location-detail"></div>
             </div>
 
         </div>
